--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
   "name": "shogiground",
-  "version": "7.8.1",
+  "version": "1.0.0",
   "description": "lishogi.org shogi ui",
-  "type": "commonjs",
-  "main": "shogiground.js",
+  "type": "module",
+  "module": "shogiground.js",
   "typings": "shogiground.d.ts",
   "dependencies": {},
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^13.0.0",
-    "@rollup/plugin-typescript": "^5.0.1",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "eslint": "^7.3.1",
-    "rollup": "^2.18.1",
-    "rollup-plugin-terser": "^6.1.0",
-    "tslib": "^2.0.0",
-    "typescript": "^3.9.6"
+    "@rollup/plugin-typescript": "^8",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
+    "eslint": "^8",
+    "prettier": "^2",
+    "rollup": "^2",
+    "rollup-plugin-terser": "^7",
+    "tslib": "^2",
+    "typescript": "^4"
   },
   "scripts": {
-    "prepare": "npm run compile",
+    "prepare": "$npm_execpath run compile",
     "compile": "tsc --outDir . --sourceMap --declaration",
     "lint": "eslint src/*.ts",
+    "format": "prettier --write .",
+    "check-format": "prettier --check .",
     "dist": "rollup --config"
   },
   "files": [
     "/*.js",
     "/*.d.ts",
     "/*.js.map",
+    "/assets/*.css",
     "/src/*.ts",
     "!/rollup.config.js"
   ],
@@ -39,7 +42,7 @@
     "ui",
     "typescript"
   ],
-  "author": "Thibault Duplessis (https://github.com/ornicar) - chessground, modified for shogi WandererXII (WandererXII/shogiground)",
+  "author": "Thibault Duplessis (https://github.com/ornicar) - shogiground; WandererXII - modified for shogi",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/WandererXII/shogiground/issues"
