--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,22 @@
 {
-  "include": ["src/*.ts"],
-  "exclude": [],
   "compilerOptions": {
-    "noEmitOnError": false,
     "strict": true,
+    "noEmitOnError": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitThis": true,
     "noImplicitReturns": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "target": "ES2017",
-    "lib": ["DOM", "ES2017"]
-  }
+    "lib": ["DOM", "ES2017"],
+    "rootDir": "./src",
+    "outDir": "./esm",
+    "declarationDir": "./esm",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
+  },
+  "include": ["./src"],
+  "exclude": ["node_modules", "./src/index.ts"]
 }
