--- a/package.json
+++ b/package.json
@@ -23,25 +23,26 @@
     }
   },
   "devDependencies": {
+    "@eslint/js": "^9",
     "@rollup/plugin-typescript": "^8",
-    "@typescript-eslint/eslint-plugin": "^7",
-    "@typescript-eslint/parser": "^7",
     "del-cli": "^6",
-    "eslint": "^8",
+    "eslint": "^9",
+    "globals": "^15.11.0",
     "prettier": "^3",
     "rollup": "^2",
     "rollup-plugin-terser": "^7",
-    "tslib": "^2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8"
   },
   "scripts": {
-    "prepare": "$npm_execpath run compile",
+    "prepare": "$npm_execpath run compile && $npm_execpath run dist",
     "precompile": "del esm",
     "compile": "tsc",
+    "predist": "del dist",
+    "dist": "rollup --config",
     "lint": "eslint",
     "format": "prettier --write .",
-    "check-format": "prettier --check .",
-    "dist": "rollup --config"
+    "check-format": "prettier --check ."
   },
   "files": [
     "dist",
