--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9",
-    "@rollup/plugin-typescript": "^8",
+    "@rollup/plugin-typescript": "^12",
+    "@rollup/plugin-terser": "^0",
     "del-cli": "^6",
     "eslint": "^9",
-    "globals": "^15.11.0",
+    "globals": "^15",
     "prettier": "^3",
-    "rollup": "^2",
-    "rollup-plugin-terser": "^7",
+    "rollup": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8"
   },
