--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,8 @@
 {
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
   "singleQuote": true,
-  "printWidth": 120,
   "arrowParens": "avoid",
   "trailingComma": "es5"
 }
