--- a/package.json
+++ b/package.json
@@ -41,22 +41,19 @@
   },
   "devDependencies": {
     "@eslint/js": "^9",
-    "@rollup/plugin-typescript": "^12",
-    "@rollup/plugin-terser": "^0",
     "del-cli": "^6",
+    "esbuild": "^0.24.0",
     "eslint": "^9",
     "globals": "^15",
     "prettier": "^3",
-    "rollup": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8"
   },
   "scripts": {
-    "prepare": "$npm_execpath run compile && $npm_execpath run dist",
-    "precompile": "del esm",
+    "prepare": "$npm_execpath run clean && $npm_execpath run compile && $npm_execpath run dist",
+    "clean": "del esm && del dist && tsconfig.tsbuildinfo",
     "compile": "tsc",
-    "predist": "del dist",
-    "dist": "rollup --config",
+    "dist": "node esbuild.mjs",
     "lint": "eslint",
     "format": "prettier --write .",
     "check-format": "prettier --check ."
