--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "GPL-3.0-or-later",
   "repository": {
     "type": "git",
-    "url": "https://github.com/WandererXII/shogiground"
+    "url": "git+https://github.com/WandererXII/shogiground.git"
   },
   "bugs": "https://github.com/WandererXII/shogiground/issues",
   "funding": "https://lishogi.org/patron",
