--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
       "import": "./esm/*.js"
     }
   },
+  "engines": {
+    "pnpm": ">=10.16.0"
+  },
   "devDependencies": {
-    "@biomejs/biome": "^2",
-    "del-cli": "^6",
-    "esbuild": "^0.25",
-    "nodemon": "^3",
-    "typescript": "^5"
+    "@biomejs/biome": "^2.3.8",
+    "del-cli": "^6.0.0",
+    "esbuild": "^0.27.1",
+    "nodemon": "^3.1.11",
+    "typescript": "^5.9.3"
   },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "prepare": "$npm_execpath run clean && $npm_execpath run compile && $npm_execpath run dist",
     "clean": "del esm && del dist && del tsconfig.tsbuildinfo",
     "compile": "tsc",
