--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,22 @@
-name: Continuous Integration
-
+name: CI
 on: [push, pull_request]
-
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
     steps:
       - uses: actions/checkout@v4
+      - name: Get PNPM version from package.json
+        id: pnpm-version
+        shell: bash
+        run: echo "pnpm_version=$(node -p 'require(`./package.json`).engines.pnpm')" >> $GITHUB_OUTPUT
+      - uses: pnpm/action-setup@v4
+        with:
+          version: ${{ steps.pnpm-version.outputs.pnpm_version }}
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
-      - uses: github/codeql-action/init@v3
-        with:
-          languages: javascript
-      - uses: github/codeql-action/analyze@v3
-      - run: |
-          npm install --foreground-scripts
-          npm run format
-          npm run lint
-          npm run type-check
+          node-version-file: package.json
+          cache: 'pnpm'
+      - run: pnpm install
+      - run: pnpm run type-check
+      - run: pnpm run check
+
